Remove individual `HexPattern` implementations, centralize color processing in `ColorApi`, introduce `ColorizeType` enum, and bump version to 1.0.6 in `pom.xml`.